# Crypto-Uncertainty-Index

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml
cli/: main.py
config/: es_cfg.py  etl_config.toml  reddit_data_cfg.py
data/: README.md
data/extract/: nexisuni_auto.py  pushshift_extract.py  reddit_extract.py  stocktwit_extract.py  wiki_weasel_extract.py
data/schema/: es_mappings.py  pmaw_reddit_classes.py
data/transform/: reddit_preprocessing.py
elasticsearch/: manager.py
es/: create_custom_topic_analyzer.http  custom_analyzer.json  custom_analyzers.py  manager.py  utils.py
es/scratchpad/: api_scratchpad.sh  docCountQuery.es  kibana_scratchpad.http  scratchpad.http
etl/: README.md
etl/extract/: coin_market_extract.py  fred_md_extract.py  kucoin_extract.py  reddit_extract.py  reddit_pkl_extract.py  twitter_extract.py  yfinance_extract.py
etl/load/: coindesk_dump_load.py  kucoin_load.py  reddit_to_es_load.py  ucry_load.py
etl/schema/: es_mappings.py  kucoin_classes.py  pmaw_reddit_classes.py
etl/schema/sql/: create_db.sql  crypto_price_schema.sql  ucry_index_schema.sql
etl/transform/: gen_es_analyzed_text.py
forecasting/: correlation_analysis.ipynb  exploratory_ts_analysis.ipynb  plotting.ipynb
forecasting/data/: docCountPerWeek.json  docCountPerWeekSubreddit.json
forecasting/prediction/: ar_price_returns.ipynb  diebold_mariano_test.ipynb  gbm_price_returns.ipynb  gbm_price_returns_mse.ipynb  price_returns_direction.ipynb  rf_best_models_feature_impt 2.ipynb  rf_best_models_feature_impt.ipynb  rf_price_returns.ipynb  rf_price_returns_mse.ipynb  rf_price_returns_rmse.ipynb  utils.py
forecasting/prediction/datasets/: ts_dataset.py
forecasting/time_series_analysis/: plotting.ipynb
forecasting/time_series_tests/Diebold-Mariano-Test/: README.md  dm_test.py
forecasting/time_series_tests/URT/: README.md
forecasting/time_series_tests/URT/Python/: CyBlaze.pxd  CyURT.pxd  CyURT.pyx  benchmark.py  example.py  setup.py
forecasting/time_series_tests/URT/R/: benchmark.R  example1.R  example2.R
forecasting/time_series_tests/URT/R/RcppURT/: DESCRIPTION
forecasting/time_series_tests/URT/R/RcppURT/R/: ADF.R  DFGLS.R  KPSS.R  OLS.R  OLSlist.R  OLSreg.R  PP.R  UnitRootTests.R
forecasting/time_series_tests/URT/R/RcppURT/include/: Coeff_adf.hpp  Coeff_dfgls.hpp  Coeff_kpss.hpp  CsvManager.hpp  DFGLS.hpp  KPSS.hpp  PP.hpp  UnitRoot.hpp
forecasting/time_series_tests/URT/R/RcppURT/src/: ADF.cpp  KPSS.cpp  Makevars  OLS.cpp  PP.cpp  RcppOLS.cpp  RcppOLSreg.cpp  RcppUnitRoot.cpp  RcppUnitRootTests.cpp  UnitRoot.cpp
forecasting/time_series_tests/URT/benchmark/: benchmark.cpp
forecasting/time_series_tests/URT/examples/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp
forecasting/time_series_tests/URT/include/: ADF.hpp  Coeff_pp.hpp  OLS.hpp  Tools.hpp  URT.hpp
forecasting/time_series_tests/URT/src/: DFGLS.cpp  OLS.cpp  UnitRoot.cpp
forecasting/ts_analysis/: plotting_scratchpad.ipynb  time_series_plots.ipynb
nlp/: cli.py
nlp/embeddings/: transformer_embeddings.py  w2v_embeddings.py
nlp/hedge_classifier/: README.md  gradio_app.py  hf_finetune.py  pbt_hf_tune.py  utils.py
nlp/hedge_classifier/data/reddit_inference/: create_inf_data.py
nlp/hedge_classifier/data/szeged_uncertainty_corpus/: README.md
nlp/hedge_classifier/data/szeged_uncertainty_corpus/cleaned_datasets/train_test/: szeged_hf_data_prep.py
nlp/hedge_classifier/data/wiki_weasel/: wiki_weasel_ds.py
nlp/hedge_classifier/data/wiki_weasel_clean/: test.csv  train.csv
nlp/hedge_classifier/huggingface/: inference.py  pbt_transformer.py  reddit_dataset.py  reddit_inference_dataset.py
nlp/hedge_classifier/hyper_tuning/pbt_best_params/: best_params_2022-03-08T19-18-59.json
nlp/hedge_classifier/models/best_pbt_bertweet/checkpoint/: config.json  trainer_state.json
nlp/hedge_classifier/models/best_pbt_bertweet/ray_tune_objective/: events.out.tfevents.1646767077.ip-172-16-32-232  params.json  result.json  stderr  stdout
nlp/lexicons/: crypto_mappings.py  emoji_mappings.py  social_media_expansions_dict.py
nlp/text_preprocessing/: common_mappings.py  crypto_mappings.py  emoji_mappings.py  operators.py
nlp/topic_models/: genetic_algo_tuner.py  gsdmm_train.py  top2vec_train.py  utils.py
nlp/topic_models/data/processed_reddit_train_test/: train_test_split.py
nlp/topic_models/lda/: bigram_corpus.py  lda_mallet.py  lda_train.py  stream_corpus.py
notebooks/: crypto_reddit_eda.ipynb  es_reddit_scratchpad.ipynb  main_reddit_data_pull.ipynb
pipelines/crypto_index/: ucry_indices.py  utils.py
pipelines/crypto_index/data/: ucry_hedge_edit.ipynb
pipelines/crypto_index/hedge_clf_based/: hf_inf_pipe_deprecated.py  ucry_hedge_index.py
pipelines/crypto_index/lucey_keyword_based/: keywords.py  ucry_indices.py
pipelines/crypto_index/topic_modelling_based/: lda_keywords.py  top2vec_keywords.py
pipelines/data_engineering/: crypto_reddit_preprocessing.py  crypto_reddit_text_reindex.py  crypto_reddit_word_embeddings.py  crypto_subreddit_data.py  crypto_text_data_all.py  crypto_text_data_extraction_pipeline.py  yfinance_data.py
postgres/: setup.py  utils.py
postgres/models/: asset_price_table.sql  drop_tables.sql  models.py
sagemaker/: pbt_hf_clf_train.ipynb
sql/: utils.py
sql/models/: models.py  ucry_index_table.sql
utils/: __init__.py  logger.py  serializer.py
