[tool.poetry]
name = "crypto-uncertainty-index"
version = "0.1.0"
description = "Cryptocurrency Uncertainty Index with NLP and Reddit Data"
authors = ["christopher.liew <christopher.liew@bytedance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
pandas = "^1.3.5"
pandas-datareader = "^0.10.0"
numpy = "<1.22"
darts = "^0.16.1"
pyarrow = "^6.0.1"
nltk = "^3.6.7"
spacy = "^3.2.1"
transformers = "^4.15.0"
gensim = "<4.0.0"
top2vec = {extras = ["sentence_transformers"], version = "^1.0.26"}
bertopic = {extras = ["visualisation"], version = "^0.9.4"}
wandb = "^0.12.10"
pyLDAvis = "^3.3.1"
emot = "^3.1"
scikit-learn = "^1.0.2"
pytorch-lightning = "^1.5.8"
xgboost = "^1.5.2"
lightgbm = "^3.3.2"
hdbscan = "^0.8.27"
prophet = "^1.0.1"
altair = "^4.2.0"
plotly-express = "^0.4.1"
pmaw = "^2.1.2"
snscrape = "^0.4.3"
elasticsearch = "^7.16.3"
elasticsearch-dsl = "^7.4.0"
SQLAlchemy = "^1.4.29"
psycopg2 = "^2.9.3"
pydantic = "<1.9.0"
rich = "^11.0.0"
typer = {extras = ["all"], version = "^0.4.0"}
ipykernel = "^6.7.0"
jupyter = "^1.0.0"
arrow = "^1.2.1"
tqdm = "^4.62.3"
black = "^21.12b0"
dacite = "^1.6.0"
requests = "^2.27.1"
toml = "^0.10.2"
yfinance = "^0.1.70"
click-spinner = "^0.1.10"
llvmlite = "^0.38.0"
xmltodict = "^0.12.0"
matplotlib = "^3.5.1"
Pillow = "9.0.0"


[tool.poetry.scripts]
ucry-cli = "cli:app"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
