[tool.poetry]
name = "crypto-uncertainty-index"
version = "0.1.0"
description = "Cryptocurrency Uncertainty Index with NLP and Reddit Data"
authors = ["christopher.liew <christopher.liew@bytedance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
pandas = "^1.4.1"
pandas-datareader = "^0.10.0"
pyarrow = "^7.0.0"
nltk = "^3.7"
spacy = "^3.2.3"
transformers = "^4.17.0"
datasets = "^1.18.4"
gensim = "^4.1.2"
llvmlite = "^0.38.0"
pyLDAvis = "^3.3.1"
scikit-learn = "^1.0.2"
emot = "^3.1"
wandb = "^0.12.11"
lightgbm = "^3.3.2"
xgboost = "^1.5.2"
altair = "^4.2.0"
plotly-express = "^0.4.1"
pmaw = "^2.1.3"
snscrape = "^0.4.3"
elasticsearch = "^8.1.0"
SQLAlchemy = "^1.4.32"
psycopg2 = "^2.9.3"
pydantic = "<1.9.0"
rich = "^12.0.0"
typer = {extras = ["all"], version = "^0.4.0"}
ipykernel = "^6.9.1"
jupyter = "^1.0.0"
arrow = "^1.2.2"
tqdm = "^4.63.0"
black = "^22.1.0"
dacite = "^1.6.0"
requests = "^2.27.1"
toml = "^0.10.2"
yfinance = "^0.1.70"
click-spinner = "^0.1.10"
xmltodict = "^0.12.0"
matplotlib = "^3.5.1"
Pillow = "^9.0.1"
polars = "^0.13.10"
jupyterlab = "^3.3.1"
tokenizers = "^0.11.6"
isoweek = "^1.3.3"
interrogate = "^1.5.0"
ray = {extras = ["tune"], version = "^1.11.0"}
emoji = "^1.7.0"
shap = "^0.40.0"
gradio = "^2.8.10"
darts = "^0.17.1"
TA-Lib = "^0.4.24"
numpy = "^1.22.0"

[tool.poetry.scripts]
ucry-cli = "cli:app"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
